<resources>
    <string name="app_name">Tingle</string>
    <string name="headline">Last thing added:</string>
    <string name="last_thing">last thing</string>

    <string name="heading_create">Add item</string>
    <string name="scan_text">Scan</string>
    <string name="to_list_view">Show things</string>

    <string name="what_thing">What item?</string>
    <string name="where">Where?</string>
    <string name="title_activity_list">ListActivity</string>

    <string name="check_online">Checking code online</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_thing_list">ThingListActivity</string>
    <string name="action_settings">Settings</string>
    <string name="e_g_keys">e.g. keys</string>
    <string name="e_g_table">e.g. table</string>
    <string name="search_for_an_item">Search for an item</string>
</resources>
