<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.benjamin.tingle2.TingleFragment"
    android:layout_height="match_parent"
    android:layout_width="match_parent" >

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <!-- Last thing added (skal nok stå i relation til hinanden horizontalt)-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="26dp"
        android:text="@string/headline"/>

    <TextView android:id="@+id/last_thing"
        android:textSize="16dp"
        android:textColor="#ff0000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <!-- thin horizontal line -->
    <View
        android:background="#000000"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>

    <!-- What new item -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/what_thing"
            android:paddingRight="16dp" />

        <EditText android:id="@+id/what_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:hint="e.g. keys"/>
    </LinearLayout>

    <!-- Where new item -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingRight="16dp"
            android:text="@string/where"/>

        <EditText android:id="@+id/where_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textSize="20sp"
            android:hint="e.g. table" />
    </LinearLayout>

    <!-- Button to add new items -->
    <Button android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/heading_create"/>

    <Button android:id="@+id/show_things_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_list_view" />


</LinearLayout>
</ScrollView>
